--- a/roles/jenkins/main.yml
+++ b/roles/jenkins/main.yml
@@ -1,43 +1,29 @@
 ---
-    - name: Installing Jenkins
-      gather_facts: false
-      become: true
-      tasks:
-        - name: Install yum
-          yum:
-            name:
-              - wget
-              - java-1.8.0-openjdk
-    
-        - name: Download jenkins.repo
-          get_url:
-            url: http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo
-            dest: /etc/yum.repos.d/jenkins.repo
-    
-        - name: Import Jenkins Key
-          rpm_key:
-            state: present
-            key: https://jenkins-ci.org/redhat/jenkins-ci.org.key
-    
-        - name: Install Jenkins
-          yum:
-            name: jenkins
-            state: present
-    
-        - name: Start & Enable Jenkins
-          systemd:
-            name: jenkins
-            state: started
-            enabled: true
-    
-        - name: Sleep for 30 seconds and continue with play
-          wait_for: timeout=30
-    
-        - name: Get init password Jenkins
-          shell: cat /var/lib/jenkins/secrets/initialAdminPassword
-          changed_when: false
-          register: result
-    
-        - name: Print init password Jenkins
-          debug:
-            var: result.stdout
+
+- name: Install packages and dependencies
+    apt: name={{ item }} update_cache={{ update_apt_cache }} state=present
+    with_items:
+    - openjdk-8-jdk  # this specific version is needed for Jenkins to run
+    - libfontconfig
+    - libffi-dev
+    - libncurses5-dev
+
+- name: Add the Jenkins public GPG key to the apt repo
+    apt_key: url=http://pkg.jenkins-ci.org/debian/jenkins-ci.org.key
+            state=present
+
+- name: Add Jenkins apt repo to the trusted sources list
+    apt_repository: repo='deb http://pkg.jenkins-ci.org/debian binary/'
+                    update_cache={{ update_apt_cache }}
+                    state=present
+
+- name: Install Jenkins server
+    apt: name=jenkins state=present
+
+- name: Install additional Python packages
+    pip: name={{ item }} state=latest
+    with_items:
+    - ansible
+    - boto
+    - flake8
+    - passlib
