--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,35 +1,37 @@
 ---
 
 - name: Install packages and dependencies
-    apt: 
-        name:"{{ item }}""
-        update_cache={{ update_apt_cache }} 
-        state=present
-    with_items:
+  apt: 
+    name: "{{ item }}"
+    update_cache: {{ update_apt_cache }} 
+    state: present
+  with_items:
     - "{{ openjdk-8-jdk }}"
     - "{{ libfontconfig }}"
     - "{{ libffi-dev }}"
     - "{{ libncurses5-dev }}"
 
 - name: Add the Jenkins public GPG key to the apt repo
-    apt_key: url=http://pkg.jenkins-ci.org/debian/jenkins-ci.org.key
-            state=present
+  apt_key: 
+    url: http://pkg.jenkins-ci.org/debian/jenkins-ci.org.key
+    state: present
 
 - name: Add Jenkins apt repo to the trusted sources list
-    apt_repository: repo='deb http://pkg.jenkins-ci.org/debian binary/'
-                    update_cache={{ update_apt_cache }}
-                    state=present
+  apt_repository: 
+    repo: 'deb http://pkg.jenkins-ci.org/debian binary/'
+    update_cache: {{ update_apt_cache }}
+    state: present
 
 - name: Install Jenkins server
-    apt: 
-        name: jenkins 
-        state: present
+  apt: 
+    name: jenkins 
+    state: present
 
 - name: Install additional Python packages
-    pip: 
-        name: "{{ item }}" 
-        state: latest
-    with_items:
+  pip: 
+    name: "{{ item }}" 
+    state: latest
+  with_items:
     - "{{ ansible }}"
     - "{{ boto }}"
     - "{{ flake8 }}"
