--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Install packages and dependencies
   apt: 
     name: "{{ item }}"
-    update_cache: {{ update_apt_cache }} 
+    update_cache: yes
     state: present
   with_items:
     - "{{ openjdk-8-jdk }}"
@@ -19,7 +19,7 @@
 - name: Add Jenkins apt repo to the trusted sources list
   apt_repository: 
     repo: 'deb http://pkg.jenkins-ci.org/debian binary/'
-    update_cache: {{ update_apt_cache }}
+    update_cache: yes
     state: present
 
 - name: Install Jenkins server
