--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -6,7 +6,7 @@
     update_cache: yes
     state: present
   with_items:
-    - "{{ openjdk-8-jdk }}"
+    - "{{ openjdk-8-jre-headless }}"
     - "{{ libfontconfig }}"
     - "{{ libffi-dev }}"
     - "{{ libncurses5-dev }}"
