--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Install packages and dependencies
   become: yes
   apt: 
-    name: ['openjdk-8-jre-headless', 'libfontconfig', 'libffi-dev', 'libncurses5-dev']
+    name: ['openjdk-8-jre-headless', 'libfontconfig', 'libffi-dev', 'libncurses5-dev', 'python3-pip']
     update_cache: yes
     state: present
 
