update docker roles

--- a/roles/docker-nginx/tasks/main.yml
+++ b/roles/docker-nginx/tasks/main.yml
@@ -5,7 +5,7 @@
     source: pull
 
 - name: stop docker-nginx
-  docker:
+  docker_container:
     name: docker-nginx
     image: nginx
     state: absent
