--- a/roles/docker-nginx/tasks/main.yml
+++ b/roles/docker-nginx/tasks/main.yml
@@ -27,11 +27,20 @@
 
 - name: Render html starter from template
   template:
-    src: default.j2
+    src: default.conf.j2
     dest: /var/lib/jenkins/docker-nginx/config/default.conf
 
 - name: run docker nginx
-  command: "docker run --name docker-nginx -p 80:80 -d -v ~/docker-nginx/html:/usr/share/nginx/html -v ~/docker-nginx/config/default.conf:/etc/nginx/conf.d/default.conf nginx"
+  docker_container:
+    name: docker-nginx
+    state: started
+    restart: yes
+  volumes:
+    - "/var/lib/jenkins/docker-nginx/html:/usr/share/nginx/html"
+    - "/var/lib/jenkins/docker-nginx/config/default.conf:/etc/nginx/conf.d/default.conf"
+  ports:
+    - "80:80"
+    - "9090:9090"
 
 
 # masih belum setup jenkins sebagai sudoers
