update docker roles

--- a/roles/docker-nginx/tasks/main.yml
+++ b/roles/docker-nginx/tasks/main.yml
@@ -17,7 +17,7 @@
 
 - name: Render html starter from template
   template:
-    src: index.j2
+    src: index.html.j2
     dest: /var/lib/jenkins/docker-nginx/html/index.html
 
 - name: create nginx configuration working dir
