update docker roles

--- a/roles/docker-nginx/tasks/main.yml
+++ b/roles/docker-nginx/tasks/main.yml
@@ -33,6 +33,7 @@
 - name: run docker nginx
   docker_container:
     name: docker-nginx
+    image: nginx
     state: started
     restart: yes
     volumes:
