update instance-a playbook

--- a/instance-a.yml
+++ b/instance-a.yml
@@ -2,5 +2,7 @@
 - name: Instance-a Playbook
   hosts: instance_a
   roles:
-    - jenkins
-    
+    - docker-nginx
+
+
+# 3 roles yang dijalankan pada playbook ini adalah docker, jenkins, docker-nginx
