add firewall to instance-b

--- a/instance-b.yml
+++ b/instance-b.yml
@@ -2,6 +2,7 @@
 - name: Instance-b Playbook
   hosts: instance_b_production
   roles:
-    - essential
-    - docker
-    - docker-elasticsearch
+    - elastic-fw
+    
+    
+# essential, docker, docker-elasticsearch
