add proxy and firewall playbook

--- a/instance-b.yml
+++ b/instance-b.yml
@@ -2,7 +2,6 @@
 - name: Instance-b Playbook
   hosts: instance_b_production
   roles:
-    - elastic-fw
-    
-    
-# essential, docker, docker-elasticsearch
+    - essential
+    - docker
+    - docker-elasticsearch
