add instance-a rules

--- a/roles/instance-a-fw/tasks/main.yml
+++ b/roles/instance-a-fw/tasks/main.yml
@@ -19,6 +19,7 @@
     dest: /var/lib/jenkins/firewall/before.rules
 
 - name: Copy configuration to ufw
+  become: yes
   command: "sudo cp /var/lib/jenkins/firewall/before.rules /etc/ufw/"
 
 - name: Enable ufw
